add director and about fields to companies

--- a/app/views/branches/show/_single_branch.html.erb
+++ b/app/views/branches/show/_single_branch.html.erb
@@ -35,6 +35,10 @@
 				<th><%=  @company.website %></th>
 			</tr>
 			<tr>
+				<th><%= t ".company_director" %></th>
+				<th><%=  link_to @company.director.name, profile_url(@company.director) %></th>
+			</tr>
+			<tr>
 				<th><%= t ".branch_manager" %></th>
 				<th><%=  link_to @branch.manager.name, profile_url(@branch.manager) %></th>
 			</tr>
