--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -6,7 +6,9 @@
     <%= f.input :slug %>
     <%= f.input :tel %>
     <%= f.input :email %>
+    <%= f.association :director %>
     <%= f.input :website %>
+    <%= f.input :about %>
     <%= f.input :image %>
     <%= f.input :cover %>
   </div>
