--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -6,6 +6,7 @@
       <th>Name</th>
       <th>Tel</th>
       <th>Email</th>
+      <th>director</th>
       <th></th>
       <th></th>
       <th></th>
@@ -18,6 +19,7 @@
         <td><%= company.name %></td>
         <td><%= company.tel %></td>
         <td><%= company.email %></td>
+        <td><%= company.director.name %></td>
         <td><%= link_to 'Show', company %></td>
         <td><%= link_to 'Edit', edit_company_path(company) %></td>
         <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
