hide director from branch

--- a/app/assets/stylesheets/homes.css.scss
+++ b/app/assets/stylesheets/homes.css.scss
@@ -113,7 +113,7 @@ $green: #b5c023;
 				}
 				.time{
 					.col{
-						padding-right: 0 ;
+						// padding-right: 0 ;
 					}
 				}
 				.price{
@@ -124,7 +124,7 @@ $green: #b5c023;
 				.user-info{
 					.name{
 						float: left;
-						width: 50px;
+						width: 75px;
 					}
 					img{
 						float: left;
