create regular trip page in trip controller and algorithm

--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -14,6 +14,10 @@
 	}	
 } 
 
+.btn-warning{
+	font-weight: bold !important;
+}
+
 $input-border-focus: #8a9627;
 $input-bg: #FDFCDF;
 	.field_with_errors {
