--- a/app/views/trips/shared/_head.html.erb
+++ b/app/views/trips/shared/_head.html.erb
@@ -10,7 +10,7 @@
 				<% if locale == :fa %>
 					<%= title_create stage, 2, t(".select_date_format")%> 
 				<% end %>
-				<%#= title_create stage, 2, t(".regular or onetime")%> 
+				<%= title_create stage, 3, t(".select_period")%> 
 
 				<%= title_create stage, 4 , t(".register_trip_info")%> 
 
