--- a/app/views/trips/select_date_format.html.erb
+++ b/app/views/trips/select_date_format.html.erb
@@ -26,7 +26,7 @@
 						</div>
 					</div>
 
-						<%= submit_tag "مرحله بعد", class: "btn btn-warning pull-left" %>
+						<%= submit_tag " #{t("next")} >>", class: "btn btn-warning pull-left" %>
 				<% end %>								
 			</div>
 	
