--- a/app/views/trips/show_edit/_form_edit.html.erb
+++ b/app/views/trips/show_edit/_form_edit.html.erb
@@ -28,7 +28,7 @@
     <div class="form-group">
       <div class="col-sm-9 col-sm-offset-3">
         <% if can? :edit, @trip %>
-          <%= f.button :submit, class: "btn btn-warning" %>
+          <%= f.submit " #{t("next")} >>", class: "btn btn-warning pull-left" %>
           <%= link_to t('.delete'), trip_path(@trip), method: :delete, class: "btn btn-danger" %>
         <% end %>
 
