--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -18,7 +18,7 @@
 	font-weight: bold !important;
 }
 
-$input-border-focus: #8a9627;
+// $input-border-focus: #8a9627;
 $input-bg: #FDFCDF;
 	.field_with_errors {
 	  @extend .has-error
