fix bug, company index and show. manager field with try

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -16,7 +16,7 @@
 </p>
 <p>
   <strong>director:</strong>
-  <%= @company.director.name %>
+  <%= @company.director.try(:name) %>
 </p>
 
 <%= image_tag( @company.image.url(:medium), alt: @company.name ,size: "340x100") %>
