--- a/app/views/search_subtrips/search.js.erb
+++ b/app/views/search_subtrips/search.js.erb
@@ -4,4 +4,4 @@ $('#search_subtrips .content .panel-body').append('<%= j render(@subtrips) %>');
 <% else %>
   $('.pagination').remove();
 <% end %>
-<% sleep 0.5 %>
+<%# sleep 0.5 %>
