--- a/app/views/trips/edit/_trip_rows.html.erb
+++ b/app/views/trips/edit/_trip_rows.html.erb
@@ -1,8 +1,14 @@
-<tr>
+<% if f.object.active == false %>
+	<tr class="inactive">
+<% elsif @trip.id == f.object.trip.id %>
+	<tr class="current_trip">
+<% end %>
+
 	<td><%= apropriate_date f.object %></td>
 	<td><%= localize f.object.date_time, :format => '%A' %></td>
 	<td><%= jalali_time f.object.date_time %></td>
 	<td><%= f.object.origin %> </td>
 	<td><%= f.object.destination %> </td>
 	<td><%= f.select :price, (0..(100 * f.object.trip.currency.price_step)).step(f.object.trip.currency.price_step).map{|s| ["#{t('currency', amount: s, unit: f.object.trip.currency.try(:symbol) )}", s]},{prompt: f.object.price }, {class: "time_select"} %></td>
+	<td> <%= f.input :active, label: false %></td>
 </tr>
