--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -11,7 +11,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :permalink %>
-    <%= f.input :content, as: :text, :input_html => {:cols => 50, :rows => 20 } %>
+    <%= f.input :content, as: :ckeditor, :input_html => {:cols => 50, :rows => 50, ckeditor: {toolbar: 'Full'} } %>
   </div>
 
   <div class="form-actions">
