--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require bootstrap
  *= require bootstrap-rtl
+ *= require jquery.ui.datepicker
  *= require select2
  *= require_self
  *= require_tree .
