--- a/app/assets/stylesheets/costum.css.scss
+++ b/app/assets/stylesheets/costum.css.scss
@@ -168,6 +168,7 @@ select.datepicker {
     background: #fdfcdf;
     border: 1px solid #B6B6B6;
     border-radius: 5px;
+    padding: 7px 2px;
 }
 
 @media (min-width: 968px) {
