--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -50,7 +50,7 @@
 #popup_signin{
 	/* --- popup sign in form */
 	#popup_signin_button{
-	  background-color: #fff !important;
+	  background-color: transparent;
 	}
 
 	ul#signin-dropdown{
