--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,23 +1,78 @@
 <%= render "ga" if Rails.env.production?  %>
   <div id="footer">
     <div class="container small">
-      
-      <ul id="social">
-        <a href="http://www.facebook.com/hamsafaryab"><li id="facebook-link" ></li></a> 
-        <a href="https://plus.google.com/107424115703016582258/posts"><li id="gplus" ></li></a> 
-        <a href="https://twitter.com/hamsafaryab"><li id="twitter" ></li></a> 
-      </ul>
 
-      <p class="text-muted pull-<%= lang_side %>">
-      	<%= t('.copyright', year: Time.now().year, href: link_to(t("site_info.title"), root_path) ).html_safe %>
-      </p>
+      <div id="sec1" class="row" >
 
-      <p class=" text-muted pull-<%= lang_other_side %>">
-      	<%= link_to t('.term'), root_path, class: "navbar-link" %>&nbsp;&nbsp;
-      	<%= link_to t('.security'), root_path, class: "navbar-link" %> &nbsp;&nbsp;
-      	<%= link_to t('.privacy'), root_path, class: "navbar-link" %>&nbsp;&nbsp;
-      	<%= link_to t('.contact'), root_path, class: "navbar-link" %>&nbsp;&nbsp;
-      </p>
+        <div class="col-xs-4 col-sm-2 list">
+          <h3 class="title"><%= t('.for_drivers') %></h3>
+          <ul>
+            <li><%= link_to t('.how_it_works_for_drivers'), page_path("how-it-works-for-drivers"), class: "footer_list" %></li>
+            <li><%= link_to t('.create_profile'), edit_user_registration_path, class: "footer_list" %></li>
+            <li><%= link_to t('.metting'), page_path("metting"), class: "footer_list" %></li>
+            <li><%= link_to t('.enter_ride'), trips_start_new_trip_path, class: "footer_list" %></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-4 col-sm-2 list">
+          <h3 class="title"><%= t('.for_passengers') %></h3>
+          <ul>
+            <li><%= link_to t('.how_it_works_for_passengers'), page_path("how-it-works-for-passengers"), class: "footer_list" %></li>
+            <li><%= link_to t('.bus_ticket_booking'), page_path("bus-ticket-booking"), class: "footer_list" %></li>
+            <li><%= link_to t('.booking'), page_path("booking"), class: "footer_list" %></li>
+            <li><%= link_to t('.search_trip'), search_search_subtrips_path, class: "footer_list" %></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-4 col-sm-2 list">
+          <h3 class="title"><%= t('.for_companies') %></h3>
+          <ul>
+            <li><%= link_to t('.spacial_account_for companies'), dashboard_path, class: "footer_list" %></li>
+            <li><%= link_to t('.how_it_works_for_companies'), page_path("how-it-works-for-companies"), class: "footer_list" %></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-4 col-sm-2 list">
+          <h3 class="title"><%= t('.help') %></h3>
+          <ul>
+            <li><%= link_to t('.cost_calculation'), page_path("cost-calculation"), class: "footer_list" %></li>
+            <li><%= link_to t('.frequently_asked_questions'), page_path("frequently-asked-questions"), class: "footer_list" %></li>
+            <li><%= link_to t('.customer_service'), page_path("customer-service"), class: "footer_list" %></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-4 col-sm-2 list">
+          <h3 class="title"><%= t('.legal') %></h3>
+          <ul>
+            <li><%= link_to t('.privacy'), page_path("privacy"), class: "footer_list" %></li>
+            <li><%= link_to t('.term'), page_path("terms"), class: "footer_list" %></li>
+            <li><%= link_to t('.security'), page_path("security"), class: "footer_list" %></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-4 col-sm-2 list">
+          <h3 class="title"><%= t('.about_hamsafaryab') %></h3>
+          <ul>
+            <li><%= link_to t('.ads_in_hamsafaryab'), page_path("ads-in-hamsafaryab"), class: "footer_list" %></li>
+            <li><%= link_to t('.benefits'), page_path("benefits"), class: "footer_list" %></li>
+            <li><%= link_to t('.contact'), dashboard_path, class: "footer_list" %></li>
+            <li><%= link_to t('.about_us'), page_path("about-us"), class: "footer_list" %></li>
+          </ul>
+        </div>
+      </div>
+
+      <div id="sec2" class="row">
+        <p id="copyright" class="text-muted pull-<%= lang_side %>">
+          <%= t('application.footer.copyright', year: Time.now().year, href: link_to(t("site_info.title"), root_path) ).html_safe %>
+        </p>
+
+        <ul id="social" class="pull-<%= lang_other_side %> ">
+          <a href="http://www.facebook.com/hamsafaryab"><li id="facebook-link" ></li></a> 
+          <a href="https://plus.google.com/107424115703016582258/posts"><li id="gplus" ></li></a> 
+          <a href="https://twitter.com/hamsafaryab"><li id="twitter" ></li></a> 
+        </ul>
+
+      </div>
     </div>
   </div>
 </body>
