remove select 2 from javascript

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -37,7 +37,7 @@
           <ul>
             <li><%= link_to t('.cost_calculation'), page_path("cost-calculation"), class: "footer_list" %></li>
             <li><%= link_to t('.frequently_asked_questions'), page_path("frequently-asked-questions"), class: "footer_list" %></li>
-            <li><%= link_to t('.customer_service'), page_path("customer-service"), class: "footer_list" %></li>
+            <!-- <li><%#= link_to t('.customer_service'), page_path("customer-service"), class: "footer_list" %></li> -->
           </ul>
         </div>
 
@@ -46,7 +46,6 @@
           <ul>
             <li><%= link_to t('.privacy'), page_path("privacy"), class: "footer_list" %></li>
             <li><%= link_to t('.term'), page_path("terms"), class: "footer_list" %></li>
-            <li><%= link_to t('.security'), page_path("security"), class: "footer_list" %></li>
           </ul>
         </div>
 
@@ -77,3 +76,4 @@
   </div>
 </body>
 </html>
+
